Update triumph cmds impl